# napari-multiscale-spatial-image

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_multiscale_spatial_image/: __init__.py  _reader.py  napari.yaml
src/napari_multiscale_spatial_image/_tests/: test_reader.py
