[metadata]
name = napari-multiscale-spatial-image

description = A napari plugin for use with xarray multiscale spatial images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GenevieveBuckley/napari-multiscale-spatial-image
author = Genevieve Buckley
author_email = 30920819+GenevieveBuckley@users.noreply.github.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/GenevieveBuckley/napari-multiscale-spatial-image/issues
    Documentation = https://github.com/GenevieveBuckley/napari-multiscale-spatial-image#README.md
    Source Code = https://github.com/GenevieveBuckley/napari-multiscale-spatial-image
    User Support = https://github.com/GenevieveBuckley/napari-multiscale-spatial-image/issues

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-multiscale-spatial-image = napari_multiscale_spatial_image:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
